--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -17,8 +17,8 @@
 
     <licenses>
         <license>
-            <name>Amazon Software License</name>
-            <url>http://aws.amazon.com/asl/</url>
+            <name>Apache 2.0 License</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
